--- a/modules/collection_insurance/locale/fr_FR.po
+++ b/modules/collection_insurance/locale/fr_FR.po
@@ -18,12 +18,10 @@ msgctxt "wizard_button:collection.create,assign,end:"
 msgid "Cancel"
 msgstr "Annuler"
 
-msgctxt ""
-"wizard_button:collection.create,input_collection_parameters,assign:"
+msgctxt "wizard_button:collection.create,input_collection_parameters,assign:"
 msgid "Assign"
 msgstr "Affecter"
 
-msgctxt ""
-"wizard_button:collection.create,input_collection_parameters,end:"
+msgctxt "wizard_button:collection.create,input_collection_parameters,end:"
 msgid "Cancel"
 msgstr "Annuler"
