--- a/modules/contract_group_process/locale/fr_FR.po
+++ b/modules/contract_group_process/locale/fr_FR.po
@@ -6,12 +6,10 @@ msgctxt "field:contract.subscribe.find_process,is_group:"
 msgid "Group"
 msgstr "Groupe"
 
-msgctxt ""
-"wizard_button:contract.subscribe,process_parameters,action:"
+msgctxt "wizard_button:contract.subscribe,process_parameters,action:"
 msgid "Start Process"
 msgstr "Démarrer le processus"
 
-msgctxt ""
-"wizard_button:contract.subscribe,process_parameters,end:"
+msgctxt "wizard_button:contract.subscribe,process_parameters,end:"
 msgid "Cancel"
 msgstr "Annuler"
