--- a/modules/bank_cog/locale/fr_FR.po
+++ b/modules/bank_cog/locale/fr_FR.po
@@ -14,6 +14,10 @@ msgctxt "error:bank:"
 msgid "Invalid BIC : %s"
 msgstr ""
 
+msgctxt "field:bank,xml_id:"
+msgid "XML Id"
+msgstr ""
+
 msgctxt "field:bank.account,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
@@ -22,13 +26,17 @@ msgctxt "field:bank.account,number:"
 msgid "Main Account Number"
 msgstr ""
 
-msgctxt "field:bank.account,numbers_as_char:"
-msgid "Numbers"
-msgstr "Numéros"
-
 msgctxt "field:bank.account,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
+
+msgctxt "field:bank.account,xml_id:"
+msgid "XML Id"
+msgstr ""
+
+msgctxt "field:bank.account.number,xml_id:"
+msgid "XML Id"
+msgstr ""
 
 msgctxt "field:ir.test_case,currency:"
 msgid "Main Currency"
@@ -37,142 +45,6 @@ msgstr "Monnaie principale"
 msgctxt "field:ir.test_case,number_of_banks:"
 msgid "Number of Banks"
 msgstr "Nombre de banques"
-
-msgctxt "field:party.bank,bank_code:"
-msgid "Bank Code"
-msgstr "Code Banque"
-
-msgctxt "field:party.bank,bic:"
-msgid "BIC"
-msgstr "BIC"
-
-msgctxt "field:party.bank,branch_code:"
-msgid "Branch Code"
-msgstr "Code Guichet"
-
-msgctxt "field:party.bank,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:party.bank,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:party.bank,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:party.bank,party:"
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:party.bank,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:party.bank,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:party.bank,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:party.bank_account,account_numbers:"
-msgid "Account Number"
-msgstr "Numéro de Compte"
-
-msgctxt "field:party.bank_account,address:"
-msgid "Address"
-msgstr "Adresse"
-
-msgctxt "field:party.bank_account,agency:"
-msgid "Agency"
-msgstr "Agence"
-
-msgctxt "field:party.bank_account,bank:"
-msgid "Bank"
-msgstr "Banque"
-
-msgctxt "field:party.bank_account,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:party.bank_account,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:party.bank_account,currency:"
-msgid "Currency"
-msgstr "Devises"
-
-msgctxt "field:party.bank_account,end_date:"
-msgid "End Date"
-msgstr "Date de Fin"
-
-msgctxt "field:party.bank_account,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:party.bank_account,numbers_as_char:"
-msgid "Numbers"
-msgstr "Numéros"
-
-msgctxt "field:party.bank_account,party:"
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:party.bank_account,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:party.bank_account,start_date:"
-msgid "Start Date"
-msgstr "Date de Début"
-
-msgctxt "field:party.bank_account,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:party.bank_account,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:party.bank_account_number,bank_account:"
-msgid "Bank Account"
-msgstr "Compte Bancaire"
-
-msgctxt "field:party.bank_account_number,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:party.bank_account_number,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:party.bank_account_number,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:party.bank_account_number,kind:"
-msgid "Kind"
-msgstr "Type"
-
-msgctxt "field:party.bank_account_number,number:"
-msgid "Number"
-msgstr "Numéro"
-
-msgctxt "field:party.bank_account_number,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:party.bank_account_number,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:party.bank_account_number,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
 
 msgctxt "field:party.party,bank_accounts:"
 msgid "Bank Accounts"
@@ -189,30 +61,6 @@ msgstr "Banque"
 msgctxt "field:party.party,main_bank_account:"
 msgid "Main Bank Account"
 msgstr "Compte bancaire principal"
-
-msgctxt "model:party.bank,name:"
-msgid "Bank"
-msgstr "Banque"
-
-msgctxt "model:party.bank_account,name:"
-msgid "Bank Account"
-msgstr "Compte Bancaire"
-
-msgctxt "model:party.bank_account_number,name:"
-msgid "Bank account Number"
-msgstr "Numéro de Compte"
-
-msgctxt "view:party.bank:"
-msgid "Bank"
-msgstr "Banque"
-
-msgctxt "view:party.bank_account_number:"
-msgid "Account Number"
-msgstr "Numéro de Compte"
-
-msgctxt "view:party.bank_account_number:"
-msgid "Migrate To IBAN"
-msgstr ""
 
 msgctxt "view:party.party:"
 msgid "Bank"
