--- a/modules/contract_insurance_health_fr/locale/fr_FR.po
+++ b/modules/contract_insurance_health_fr/locale/fr_FR.po
@@ -1,66 +1,14 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:health.insurance_fund,code:"
-msgid "Code"
-msgstr "Code"
+msgctxt "field:contract.covered_element,is_law_madelin:"
+msgid "Law Madelin"
+msgstr "Loi Madelin"
 
-msgctxt "field:health.insurance_fund,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:health.insurance_fund,create_date_:"
-msgid "Creation date"
-msgstr "Creation date"
-
-msgctxt "field:health.insurance_fund,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:health.insurance_fund,department:"
-msgid "Department"
-msgstr "Département"
-
-msgctxt "field:health.insurance_fund,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:health.insurance_fund,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
-msgctxt "field:health.insurance_fund,name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:health.insurance_fund,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:health.insurance_fund,hc_system:"
-msgid "Health Care System"
-msgstr "Régime"
-
-msgctxt "field:health.insurance_fund,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:health.insurance_fund,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:health.party_complement,department:"
-msgid "Department"
-msgstr "Département"
-
-msgctxt "field:health.party_complement,insurance_fund:"
-msgid "Insurance Fund"
-msgstr "Caisse d'Affiliation"
-
-msgctxt "field:health.party_complement,hc_system:"
-msgid "Health Care System"
-msgstr "Régime"
+msgctxt "field:contract.covered_element,is_rsi:"
+msgid "Is RSI"
+msgstr "RSI"
 
 msgctxt "field:health.care_system,code:"
 msgid "Code"
@@ -106,15 +54,71 @@ msgctxt "field:health.care_system,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:contract.covered_element,is_law_madelin:"
-msgid "Law Madelin"
-msgstr "Loi Madelin"
+msgctxt "field:health.care_system,xml_id:"
+msgid "XML Id"
+msgstr ""
 
-msgctxt "field:contract.covered_element,is_rsi:"
-msgid "Is RSI"
-msgstr "RSI"
+msgctxt "field:health.insurance_fund,code:"
+msgid "Code"
+msgstr "Code"
 
-msgctxt "model:health.insurance_fund,name:"
+msgctxt "field:health.insurance_fund,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:health.insurance_fund,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
+msgctxt "field:health.insurance_fund,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:health.insurance_fund,department:"
+msgid "Department"
+msgstr "Département"
+
+msgctxt "field:health.insurance_fund,hc_system:"
+msgid "Health Care System"
+msgstr "Régime"
+
+msgctxt "field:health.insurance_fund,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:health.insurance_fund,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:health.insurance_fund,name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:health.insurance_fund,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:health.insurance_fund,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:health.insurance_fund,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:health.insurance_fund,xml_id:"
+msgid "XML Id"
+msgstr ""
+
+msgctxt "field:health.party_complement,department:"
+msgid "Department"
+msgstr "Département"
+
+msgctxt "field:health.party_complement,hc_system:"
+msgid "Health Care System"
+msgstr "Régime"
+
+msgctxt "field:health.party_complement,insurance_fund:"
 msgid "Insurance Fund"
 msgstr "Caisse d'Affiliation"
 
@@ -122,15 +126,15 @@ msgctxt "model:health.care_system,name:"
 msgid "Health Care System"
 msgstr "Régime"
 
-msgctxt "model:ir.action,name:act_insurance_fund_form"
-msgid "Insurance Funds"
-msgstr "Caisses d'Affiliation"
+msgctxt "model:health.insurance_fund,name:"
+msgid "Insurance Fund"
+msgstr "Caisse d'Affiliation"
 
 msgctxt "model:ir.action,name:act_hc_system_form"
 msgid "Health Care Systems"
 msgstr "Régimes"
 
-msgctxt "model:ir.ui.menu,name:menu_insurance_fund_form"
+msgctxt "model:ir.action,name:act_insurance_fund_form"
 msgid "Insurance Funds"
 msgstr "Caisses d'Affiliation"
 
@@ -138,13 +142,13 @@ msgctxt "model:ir.ui.menu,name:menu_hc_system_form"
 msgid "Health Care Systems"
 msgstr "Régimes"
 
+msgctxt "model:ir.ui.menu,name:menu_insurance_fund_form"
+msgid "Insurance Funds"
+msgstr "Caisses d'Affiliation"
+
 msgctxt "selection:offered.option.description,family:"
 msgid "Health"
 msgstr "Santé"
-
-msgctxt "view:health.insurance_fund:"
-msgid "Insurance Fund"
-msgstr "Caisse d'Affiliation"
 
 msgctxt "view:health.care_system:"
 msgid "Health Care System"
@@ -153,3 +157,7 @@ msgstr "Régime"
 msgctxt "view:health.care_system:"
 msgid "name"
 msgstr "Nom"
+
+msgctxt "view:health.insurance_fund:"
+msgid "Insurance Fund"
+msgstr "Caisse d'Affiliation"
