--- a/modules/country_cog/locale/fr_FR.po
+++ b/modules/country_cog/locale/fr_FR.po
@@ -2,17 +2,13 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:ir.test_case,load_all_zipcodes:"
-msgid "Load all Zip Codes"
-msgstr "Charger les codes postaux"
+msgctxt "field:country.country,xml_id:"
+msgid "XML Id"
+msgstr ""
 
-msgctxt "field:ir.test_case,main_zip:"
-msgid "Main Zip"
-msgstr "Code postal principal"
-
-msgctxt "field:country.country,create_date_:"
-msgid "Creation date"
-msgstr "Creation date"
+msgctxt "field:country.subdivision,xml_id:"
+msgid "XML Id"
+msgstr ""
 
 msgctxt "field:country.zipcode,city:"
 msgid ""
@@ -54,9 +50,21 @@ msgctxt "field:country.zipcode,write_uid:"
 msgid ""
 msgstr " "
 
+msgctxt "field:country.zipcode,xml_id:"
+msgid "XML Id"
+msgstr ""
+
 msgctxt "field:country.zipcode,zip:"
 msgid ""
 msgstr " "
+
+msgctxt "field:ir.test_case,load_all_zipcodes:"
+msgid "Load all Zip Codes"
+msgstr "Charger les codes postaux"
+
+msgctxt "field:ir.test_case,main_zip:"
+msgid "Main Zip"
+msgstr "Code postal principal"
 
 msgctxt "model:country.zipcode,name:"
 msgid ""
