--- a/modules/process/locale/fr_FR.po
+++ b/modules/process/locale/fr_FR.po
@@ -6,14 +6,6 @@ msgctxt "error:process.action:"
 msgid "Method %s does not exist on model %s"
 msgstr "La méthode %s n'existe pas sur le modèle %s"
 
-msgctxt "error:process:"
-msgid "%s: Step %s cannot be used more than once"
-msgstr "%s: L'étape %s ne peut être utilisée qu'une seule fois"
-
-msgctxt "error:process:"
-msgid "The technical name must be unique"
-msgstr "Le nom technique doit être unique"
-
 msgctxt "error:process.process_framework:"
 msgid "Everything is good !"
 msgstr "Tout est bon!"
@@ -30,61 +22,17 @@ msgctxt "error:process.transition:"
 msgid "Pyson expression and description is mandatory"
 msgstr "Expression Pyson et la description sont obligatoires"
 
+msgctxt "error:process:"
+msgid "%s: Step %s cannot be used more than once"
+msgstr "%s: L'étape %s ne peut être utilisée qu'une seule fois"
+
+msgctxt "error:process:"
+msgid "The technical name must be unique"
+msgstr "Le nom technique doit être unique"
+
 msgctxt "field:ir.model,is_workflow:"
 msgid "Is Workflow"
 msgstr "Processus"
-
-msgctxt "field:process.action,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:process.action,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:process.action,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:process.action,method_name:"
-msgid "Method Name"
-msgstr "Nom de la Méthode"
-
-msgctxt "field:process.action,on_model:"
-msgid "On Model"
-msgstr "Modèle"
-
-msgctxt "field:process.action,parent_step:"
-msgid "Parent Step"
-msgstr "Etape Parente"
-
-msgctxt "field:process.action,parent_transition:"
-msgid "Parent Transition"
-msgstr "Transition Parente"
-
-msgctxt "field:process.action,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:process.action,sequence:"
-msgid "Sequence"
-msgstr "Séquence"
-
-msgctxt "field:process.action,source_code:"
-msgid "Source Code"
-msgstr "Code Source"
-
-msgctxt "field:process.action,technical_kind:"
-msgid "Kind"
-msgstr "Type"
-
-msgctxt "field:process.action,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:process.action,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
 
 msgctxt "field:process,all_steps:"
 msgid "All Steps"
@@ -166,14 +114,6 @@ msgctxt "field:process,xml_tree:"
 msgid "Tree View XML"
 msgstr "Description de la Vue Arbre"
 
-msgctxt "field:process.process_framework,current_state:"
-msgid "Current State"
-msgstr "Etat Courant"
-
-msgctxt "field:process.process_framework,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:process-menu,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
@@ -245,6 +185,66 @@ msgstr "Date de mise à jour"
 msgctxt "field:process-process.step,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
+
+msgctxt "field:process.action,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:process.action,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:process.action,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:process.action,method_name:"
+msgid "Method Name"
+msgstr "Nom de la Méthode"
+
+msgctxt "field:process.action,on_model:"
+msgid "On Model"
+msgstr "Modèle"
+
+msgctxt "field:process.action,parent_step:"
+msgid "Parent Step"
+msgstr "Etape Parente"
+
+msgctxt "field:process.action,parent_transition:"
+msgid "Parent Transition"
+msgstr "Transition Parente"
+
+msgctxt "field:process.action,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:process.action,sequence:"
+msgid "Sequence"
+msgstr "Séquence"
+
+msgctxt "field:process.action,source_code:"
+msgid "Source Code"
+msgstr "Code Source"
+
+msgctxt "field:process.action,technical_kind:"
+msgid "Kind"
+msgstr "Type"
+
+msgctxt "field:process.action,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:process.action,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:process.process_framework,current_state:"
+msgid "Current State"
+msgstr "Etat Courant"
+
+msgctxt "field:process.process_framework,id:"
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:process.status,code:"
 msgid "Code"
@@ -518,17 +518,9 @@ msgctxt "model:ir.ui.menu,name:process_menu_id"
 msgid "Process Main Menu"
 msgstr "Moteur de Processus"
 
-msgctxt "model:process.action,name:"
-msgid "Code"
-msgstr "Code"
-
 msgctxt "model:process,name:"
 msgid "Process"
 msgstr "Descripteur de Processus"
-
-msgctxt "model:process.process_framework,name:"
-msgid "Process Framework"
-msgstr ""
 
 msgctxt "model:process-menu,name:"
 msgid "Process Menu Relation"
@@ -537,6 +529,14 @@ msgstr "Relation Processus Menu"
 msgctxt "model:process-process.step,name:"
 msgid "Process to Step relation"
 msgstr "Relation Processus - Etape"
+
+msgctxt "model:process.action,name:"
+msgid "Code"
+msgstr "Code"
+
+msgctxt "model:process.process_framework,name:"
+msgid "Process Framework"
+msgstr ""
 
 msgctxt "model:process.status,name:"
 msgid "Process Status"
@@ -551,24 +551,12 @@ msgid "Step Group Relation"
 msgstr "Autorisations pour l'Etape"
 
 msgctxt "model:process.transition,name:"
-msgid "Process Transition"
+msgid "Step Transition"
 msgstr "Transition d'Etape"
 
 msgctxt "model:process.transition-group,name:"
 msgid "Transition Authorization"
 msgstr "Autorisations pour les Transitions"
-
-msgctxt "selection:process.action,technical_kind:"
-msgid "After"
-msgstr "Après"
-
-msgctxt "selection:process.action,technical_kind:"
-msgid "Before"
-msgstr "Avant"
-
-msgctxt "selection:process.action,technical_kind:"
-msgid "Transition"
-msgstr "Transition"
 
 msgctxt "selection:process,step_button_group_position:"
 msgid "Bottom"
@@ -581,6 +569,18 @@ msgstr "Aucun"
 msgctxt "selection:process,step_button_group_position:"
 msgid "Right"
 msgstr "Droite"
+
+msgctxt "selection:process.action,technical_kind:"
+msgid "After"
+msgstr "Après"
+
+msgctxt "selection:process.action,technical_kind:"
+msgid "Before"
+msgstr "Avant"
+
+msgctxt "selection:process.action,technical_kind:"
+msgid "Transition"
+msgstr "Transition"
 
 msgctxt "selection:process.transition,kind:"
 msgid "Calculated"
@@ -876,7 +876,7 @@ msgstr "Processus Terminé. Commencez une nouvelle tâche"
 
 msgctxt "view:contract:"
 msgid ""
-"The current record isin a state (Validation de l'avenant) that you are not "
+"The current record is in a state (Validation de l'avenant) that you are not "
 "allowed to view."
 msgstr ""
 
@@ -892,37 +892,17 @@ msgctxt "view:contract:"
 msgid "Validation du contrat Collectif"
 msgstr "Validation du contrat Collectif"
 
-msgctxt "view:process.action:"
-msgid "Code"
-msgstr "Code"
-
-msgctxt "view:process:"
-msgid "Description"
-msgstr "Description"
-
-msgctxt "view:process:"
-msgid "Process"
-msgstr "Descripteur de Processus"
-
-msgctxt "view:process:"
-msgid "Processes"
-msgstr "Paramétrage des Processus"
-
-msgctxt "view:process:"
-msgid "Update Menu"
-msgstr "Recharger le Menu"
-
-msgctxt "view:process:"
-msgid "XML"
-msgstr "Description de la Vue"
-
 msgctxt "view:process-process.step:"
 msgid "Process Relation"
 msgstr ""
 
 msgctxt "view:process-process.step:"
 msgid "Process Steps"
-msgstr ""
+msgstr "Etapes"
+
+msgctxt "view:process.action:"
+msgid "Code"
+msgstr "Code"
 
 msgctxt "view:process.status:"
 msgid "Status"
@@ -953,9 +933,29 @@ msgid "XML"
 msgstr "Description de la Vue"
 
 msgctxt "view:process.transition:"
-msgid "Process Transition"
-msgstr "Descripteur de Transition"
+msgid "Step Transition"
+msgstr "Transition d'Etape"
 
 msgctxt "view:process.transition:"
 msgid "Transitions"
 msgstr "Transitions"
+
+msgctxt "view:process:"
+msgid "Description"
+msgstr "Description"
+
+msgctxt "view:process:"
+msgid "Process"
+msgstr "Descripteur de Processus"
+
+msgctxt "view:process:"
+msgid "Processes"
+msgstr "Paramétrage des Processus"
+
+msgctxt "view:process:"
+msgid "Update Menu"
+msgstr "Recharger le Menu"
+
+msgctxt "view:process:"
+msgid "XML"
+msgstr "Description de la Vue"
